@@ -1,6 +1,7 @@
 44
 ================
 
+19/03/21 Fix bug in location filters cancelling each other on animal open
 18/03/21 Leaking chooser destructors on medical screens
 18/03/21 Lazy load changelog on about screen
 18/03/21 Remove img.onerror inline code in favour of event delegate
